# source_level_editor

./: .clang-format  .gitignore
src/: CMakeLists.txt  createeditor.bat
src/choreoobjects/: CMakeLists.txt
src/cmake/: base.cmake  groups.cmake  msvc_base.cmake  platform_dirs.cmake  platforms.cmake  posix_base.cmake  postbuild.cmake  windows_base.cmake
src/cmake/misc/: install_lib.cmake  revision.cmake  source_use_steamapi.cmake  srcgrp.cmake
src/fgdlib/: CMakeLists.txt  gamedata.cpp  gdclass.cpp  gdvar.cpp
src/hammer/: AnchorMgr.h  AngleBox.cpp  ArchDlg.cpp  AutoSelCombo.cpp  Box3D.cpp  BuildNum.h  CMakeLists.txt  ChildFrm.cpp  DetailObjects.cpp  DispDlg.cpp  DispPaint.cpp  DispShore.cpp  DispShore.h  DummyTexture.cpp  EditGameClass.cpp  EditGameConfigs.cpp  EditGroups.cpp  EditPrefabDlg.cpp  EntityHelpDlg.cpp  EntityReportDlg.cpp  EntityReportDlg.h  FaceEdit_DispPage.cpp  FaceEdit_MaterialPage.cpp  FilterControl.cpp  FilteredComboBox.cpp  GroupList.cpp  GroupList.h  Hammer.rc  IconComboBox.cpp  LoadSave_RMF.cpp  MainFrm.cpp  MainFrm.h  Manifest.cpp  ManifestDialog.cpp  MapAnimationDlg.cpp  MapAnimator.cpp  MapCheckDlg.cpp  MapDecal.cpp  MapDiffDlg.cpp  MapDisp.cpp  (+100 more)
src/hammer_launcher/: CMakeLists.txt  main.cpp
src/lib/public/: appframework.lib
src/mathlib/: CMakeLists.txt
src/public/: IHammer.h  bone_accessor.cpp  bone_setup.cpp  bone_setup.h  bspflags.h  collisionUtils.cpp  const.h  disp_common.cpp  disp_powerinfo.cpp  filesystem_init.cpp  gametrace.h  ivraddll.h  pixelwriter.h  renderparm.h  revision.h.in
src/public/fgdlib/: gamedata.h  gdvar.h
src/public/materialsystem/: imaterialsystem.h
src/public/mathlib/: ssemath.h
src/public/tier0/: memalloc.h  platform.h
src/public/tier1/: bitbuf.h  utlmemory.h
src/public/vgui_controls/: Panel.h
src/public/vstdlib/: jobthread.h
src/raytrace/: CMakeLists.txt
src/tier1/: CMakeLists.txt
src/vgui2/dme_controls/: particlesystempanel.cpp
src/vgui2/matsys_controls/: CMakeLists.txt  baseassetpicker.cpp  potterywheelpanel.cpp
src/vgui2/vgui_controls/: CMakeLists.txt  Panel.cpp  RichText.cpp
